spacing corrections

--- a/css/style.css
+++ b/css/style.css
@@ -28,71 +28,71 @@ float: center;
 }
 
 body {
-	margin-top:0;
-	padding:0;
-	display: flex;
-	justify-content:center;
-	align-items:center;
-	height:100vh;
-	background:(rgb(233, 31, 240));
+  margin-top:0;
+  padding:0;
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+  background:(rgb(233, 31, 240));
 }
   
   ul{
-	margin:0;
-	padding:0;
-	display:flex;
+  margin:0;
+  padding:0;
+  display:flex;
 }
   
   ul li{
-	list-style:none;
-	margin:0 20px;
-	transition:0.5s;
+  list-style:none;
+  margin:0 20px;
+  transition:0.5s;
 }
   
   ul li a{
-	display: block;
-	position:relative;
-	text-decoration:none;
-	padding:5px;
-	font-size:18px;
-	font-family: sans-serif;
-	color:#b80606;
-	text-transform:uppercase;
-	transition:0.5s;
+  display: block;
+  position:relative;
+  text-decoration:none;
+  padding:5px;
+  font-size:18px;
+  font-family: sans-serif;
+  color:#b80606;
+  text-transform:uppercase;
+  transition:0.5s;
 }
   
   ul:hover li a{
-	transform:scale(1.5);
-	opacity:0.2;
-	filter:blur(5px);
+  transform:scale(1.5);
+  opacity:0.2;
+  filter:blur(5px);
 }
   
   ul li a:hover{
-	transform:scale(2);
-	opacity:1;
-	filter:blur(0);
-	text-decoration:none;
-	color:#a30a0a;
+  transform:scale(2);
+  opacity:1;
+  filter:blur(0);
+  text-decoration:none;
+  color:#a30a0a;
 }
   
   ul li a:before{
-	content:'';
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	background: goldenrod;
-	transition:0.5s;
-	transform-origin:right;
-	transform:scaleX(0);
-	z-index:-1;
+  content:'';
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background: goldenrod;
+  transition:0.5s;
+  transform-origin:right;
+  transform:scaleX(0);
+  z-index:-1;
 }
   
   ul li a:hover:before{
-	transition:transform 0.5s;
-	transform-origin:center;
-	transform:scaleX(1);
+  transition:transform 0.5s;
+  transform-origin:center;
+  transform:scaleX(1);
 }
 
 .container{
@@ -108,70 +108,68 @@ body {
 }
 
 body {
-	background-color: #e8b923;
-	color: green;
-  }
+  background-color: #e8b923;
+  color: green;
+}
   
   h1 {
-	background-color: purple;
-	color: #e8b923;
-  }
+  background-color: purple;
+  color: #e8b923;
+}
   
   div {
-	background-color: black;
-	color: #e8b923;
-  }
-  Important: High contrast is very i:flex;
-  }
+  background-color: black;
+  color: #e8b923;
+}
   
   ul li{
-	list-style:none;
-	margin:0 20px;
-	transition:0.5s;
-  }
+  list-style:none;
+  margin:0 20px;
+  transition:0.5s;
+}
   
   ul li a{
-	display: block;
-	position:relative;
-	text-decoration:none;
-	padding:5px;
-	font-size:18px;
-	font-family: sans-serif;
-	color:purple;
-	text-transform:uppercase;
-	transition:0.5s;
-  }
+  display: block;
+  position:relative;
+  text-decoration:none;
+  padding:5px;
+  font-size:18px;
+  font-family: sans-serif;
+  color:purple;
+  text-transform:uppercase;
+  transition:0.5s;
+}
   
   ul:hover li a{
-	transform:scale(1.5);
-	opacity:0.2;
-	filter:blur(5px);
-  }
+  transform:scale(1.5);
+  opacity:0.2;
+  filter:blur(5px);
+}
   
   ul li a:hover{
-	transform:scale(2);
-	opacity:1;
-	filter:blur(0);
-	text-decoration:none;
-	color:purple;
-  }
+  transform:scale(2);
+  opacity:1;
+  filter:blur(0);
+  text-decoration:none;
+  color:purple;
+}
   
   ul li a:before{
-	content:'';
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	background:#e8b923;
-	transition:0.5s;
-	transform-origin:right;
-	transform:scaleX(0);
-	z-index:-1;
-  }
+  content:'';
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:#e8b923;
+  transition:0.5s;
+  transform-origin:right;
+  transform:scaleX(0);
+  z-index:-1;
+}
   
   ul li a:hover:before{
-	transition:transform 0.5s;
-	transform-origin:left;
-	transform:scaleX(1);
-  }
+  transition:transform 0.5s;
+  transform-origin:left;
+  transform:scaleX(1);
+}
